--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,8 +4,8 @@ on:
     branches:
       - master
 jobs:
-  check-typing:
-    name: Check typing
+  check-code:
+    name: Check code
     runs-on: ubuntu-latest
 
     steps:
@@ -17,40 +17,6 @@ jobs:
       with:
         github_access_token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Check typing
+    - name: Check code
       run: |
-        nix-shell --command "mypy convex.py"
-
-  run-linter:
-    name: Run linter
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    - name: Install nix
-      uses: cachix/install-nix-action@v24
-      with:
-        github_access_token: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Run linter
-      run: |
-        nix-shell --command "pylint convex.py"
-
-  run-unit-tests:
-    name: Run unit tests
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    - name: Install nix
-      uses: cachix/install-nix-action@v24
-      with:
-        github_access_token: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Run unit tests
-      run: |
-        nix-shell --command "python -m unittest convex.TestConvex"
+        nix-shell --command "just check"
